# bird2glass

./: ChangeLog.md  README.md  pyproject.toml
src/bird2glass/: __main__.py  tweet.py
