[project]
name = "bird2glass"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "python-dateutil>=2.9.0.post0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
bird2glass = "bird2glass.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "types-python-dateutil>=2.9.0.20241003",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bird2glass"]
